# VKWR

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
cmake/: cpu_extension.cmake  utils.cmake
csrc/core/: macros.h  platform.h  register.h
csrc/rwkv/: cublas_ops.cu  gemm_ops.cu  rwkv_ops.h  rwkv_utils.h  torch_bindings.cpp  wkv_ops.cu
csrc/rwkv7/: torch_bindings.cpp
csrc/sampling/: sampling.cu  sampling_bindings.h  torch_bindings.cpp
csrc/state/: state_bindings.h  state_fwd_fp16.cu  torch_bindings.cpp
csrc/v1/common/: v1_check.h  warp_primitives.cuh
csrc/v1/linear/: linear_ops.cu  linear_ops.h  torch_bindings.cpp
csrc/v1/mix/: mix_ops.cu  mix_ops.h  torch_bindings.cpp
csrc/v1/norm/: norm_ops.cu  norm_ops.h  torch_bindings.cpp
csrc/v1/rank/: rank_ops.cu  rank_ops.h  torch_bindings.cpp
csrc/v1/wkv/: advance_i32_ops.cu  torch_bindings.cpp  wkv_fp16_v2.h  wkv_fp32_v2.cu  wkv_fp32_v2.h
requirements/: cuda.txt  lint.txt
tests/ops/: test_v1_linear_ops.py  test_v1_mix_ops.py  test_v1_norm_ops.py  test_v1_rank_ops.py  test_v1_wkv_ops.py
tests/ops/monkey_patch/: test_monkey_patch.py  test_monkey_patch_v1.py
vkwr/: __init__.py
vkwr/_ops/: __init__.py  rwkv7_ops.py  sampling_ops.py
vkwr/_ops/v1/: __init__.py  v1_linear_ops.py  v1_mix_ops.py  v1_norm_ops.py  v1_rank_ops.py  v1_wkv_ops.py
vkwr/model_executor/: __init__.py
vkwr/model_executor/kernels/: wkv_kernels.py
vkwr/model_executor/kernels/rwkv/: channel_mixing.py  time_mixing.py
vkwr/model_executor/layers/: embedding.py  linear.py  norm.py  sampler.py
vkwr/model_executor/model_loader/: base_loader.py  default_loader.py  weight_utils.py
vkwr/model_executor/models/: rwkv7.py
